k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cats-dogs-classification
  labels:
    name: cats-dogs-classification
    managed-by: deployment
