k8s/data-copier.yaml
apiVersion: v1
kind: Pod
metadata:
  name: data-copier
  namespace: cats-dogs-classification
spec:
  serviceAccountName: training-account
  containers:
  - name: copier
    image: busybox:latest
    command: ['/bin/sh']
    args: ['-c', 'while true; do sleep 3600; done']
    volumeMounts:
    - name: training-data
      mountPath: /mnt/training-data
  volumes:
  - name: training-data
    persistentVolumeClaim:
      claimName: training-data-pvc
  restartPolicy: Always
