k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-dogs-classifier-service
  labels:
    app: cats-dogs-classifier
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: cats-dogs-classifier
